--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "Keshav suman",
   "license": "ISC",
   "dependencies": {
+    "agora-access-token": "^2.0.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
     "nodemon": "^2.0.15",
+    "razorpay": "^2.8.0",
     "socket.io": "^4.4.1"
   }
 }
