--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "agora-access-token": "^2.0.4",
+    "aws-sdk": "^2.1082.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "nodemon": "^2.0.15",
     "razorpay": "^2.8.0",
     "socket.io": "^4.4.1",
