--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
   "dependencies": {
     "agora-access-token": "^2.0.4",
     "aws-sdk": "^2.1082.0",
+    "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.1.7",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "nodemon": "^2.0.15",
+    "otp-generator": "^4.0.0",
     "razorpay": "^2.8.0",
     "socket.io": "^4.4.1",
     "uuid4": "^2.0.2"
